cmake_minimum_required(VERSION 2.8.3)
project(vulcano_base_description)

find_package(catkin REQUIRED COMPONENTS
  gazebo_ros
  message_runtime
  robotnik_sensors
  std_msgs
  std_srvs
  tf
)

catkin_package()

install(DIRECTORY launch meshes robots urdf
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
)
